[gd_scene load_steps=5 format=3 uid="uid://bikwbmpr8e60e"]

[ext_resource type="Script" path="res://messagebox.gd" id="1_p6m2j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bhlun"]
content_margin_left = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.435294, 0.435294, 0.435294, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 2
border_width_bottom = 2

[sub_resource type="Theme" id="Theme_mlaxv"]
Label/font_sizes/font_size = 20
PanelContainer/styles/panel = SubResource("StyleBoxFlat_bhlun")

[sub_resource type="ImageTexture" id="ImageTexture_5atc3"]

[node name="MessageBox" type="MarginContainer"]
offset_right = 148.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_mlaxv")
script = ExtResource("1_p6m2j")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="VBoxMessage" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="MsgLabelTop" type="Label" parent="PanelContainer/VBoxMessage"]
layout_mode = 2
theme_override_colors/font_color = Color(0.827451, 0.427451, 0, 1)
theme_override_font_sizes/font_size = 24
text = "ATTENTION !"
horizontal_alignment = 1

[node name="MsgTexture" type="TextureRect" parent="PanelContainer/VBoxMessage"]
layout_mode = 2
texture = SubResource("ImageTexture_5atc3")
expand_mode = 5

[node name="MsgLabelBottom" type="Label" parent="PanelContainer/VBoxMessage"]
layout_mode = 2
text = "message"
horizontal_alignment = 1

[connection signal="timeout" from="Timer" to="." method="_on_message_timer_timeout"]
